--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             <nav>
                 <a href="#" class="logo">
                     <div class="logo-image">
-                        <img src="/home/julian/Documents/TÜ.EVAL website/TE_logo_0_reduced.png" alt="TÜ.EVAL Logo">
+                        <img src="TE_logo_0_reduced.png" alt="TÜ.EVAL Logo">
                     </div>
                 </a>
                 <div class="nav-links">
@@ -686,7 +686,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-image">
-                    <img src="/home/julian/Documents/TÜ.EVAL website/TE_logo_0.png" alt="Company Logo" style="width:70%; height:0%; object-fit: contain;">
+                    <img src="TE_logo_0.png" alt="Company Logo" style="width:70%; height:0%; object-fit: contain;">
                 </div>
                 <div class="hero-text">
                     <h1>KI-Evaluierung & Compliance nach höchsten Standards</h1>
