--- a/index.html
+++ b/index.html
@@ -1953,8 +1953,8 @@
             <div class="jobs-contact-box">
                 <p>Interested? Send a short note about which role and project excites you most, along with a CV or link to relevant work.</p>
                 <p>
-                    <a href="/cdn-cgi/l/email-protection#a8cbc7c6dcc9cbdce8c5c1c5c1da86cec1dc" class="email-link">
-                        <i class="fas fa-envelope"></i>&nbsp; <span class="__cf_email__" data-cfemail="3e5d51504a5f5d4a7e535753574c1058574a">[email&#160;protected]</span>
+                    <a href="mailto:contact@mimir.fit" class="email-link">
+                        <i class="fas fa-envelope"></i>&nbsp; contact@mimir.fit
                     </a>
                 </p>
                 <a href="documents/mimir_open_positions.pdf" target="_blank" class="jobs-pdf-link">
@@ -1970,7 +1970,7 @@
             <h2>Get in Touch</h2>
             <div class="contact-message">
                 <p>Whether you're interested in using our products, partnering with us, joining our team, or exploring funding opportunities — we'd love to hear from you.</p>
-                <p>Email us at <a href="/cdn-cgi/l/email-protection#81e2eeeff5e0e2f5c1ece8ece8f3afe7e8f5"><span class="__cf_email__" data-cfemail="3c5f5352485d5f487c515551554e125a5548">[email&#160;protected]</span></a></p>
+                <p>Email us at <a href="mailto:contact@mimir.fit">contact@mimir.fit</a></p>
             </div>
         </div>
     </section>
@@ -1980,7 +1980,7 @@
         <div class="container">
             <h2>Legal Notice (Impressum)</h2>
             <div class="legal-content">
-                <h3>Information pursuant to § 5 TMG (German Telemedia Act)</h3>
+                <h3>Information pursuant to § 5 DDG (German Digitale-Dienste-Gesetz)</h3>
                 <p>
                     MIMIR GmbH<br>
                     Eichenweg 4<br>
@@ -1996,7 +1996,7 @@
 
                 <h3>Contact</h3>
                 <p>
-                    E-mail: <a href="/cdn-cgi/l/email-protection#31525e5f45505245715c585c58431f575845"><span class="__cf_email__" data-cfemail="2f4c40415b4e4c5b6f424642465d0149465b">[email&#160;protected]</span></a><br>
+                    E-mail: <a href="mailto:contact@mimir.fit">contact@mimir.fit</a><br>
                 </p>
                 
                 <h3>Commercial Register Entry</h3>
@@ -2009,7 +2009,7 @@
                 <h3>VAT Identification Number</h3>
                 <p>
                     VAT identification number pursuant to §27 a German Value Added Tax Act (UStG):<br>
-                    To be announced.
+                    DE460159090
                 </p>
             </div>
         </div>
@@ -2047,7 +2047,7 @@
                 <div class="footer-column">
                     <h3>Contact</h3>
                     <ul>
-                        <li><a href="/cdn-cgi/l/email-protection#2c45424a436c414541455e024d45"><i class="fas fa-envelope"></i> <span class="__cf_email__" data-cfemail="1a73747c755a7773777368347b73">[email&#160;protected]</span></a></li>
+                        <li><a href="mailto:contact@mimir.fit"><i class="fas fa-envelope"></i> contact@mimir.fit</a></li>
                         <li><i class="fas fa-map-marker-alt"></i> Tübingen, Germany</li>
                     </ul>
                 </div>
